# Rust_App

./: .gitignore  App.rb  App.rs  Array_Methods.rb  Arrays.rb  Cargo.toml  Casting_Converting.rb  Classes_and_Objects.rb  Constructors.rb  Dictionaries.rb  Dimensional_Arrays.rb  Exception_Catching.rb  For_Loops.rb  Getters_and_Setters.rb  If_Statements.rb  Inheritance.rb  Methods.rb  Numbers.rb  README.md  Strings.rb  Switch_Statements.rb  User_Input.rb  Variables.rb  While_Loops.rb
src/App_First/: App.rs
src/Array_Methods/: Array_Methods.rs
src/Arrays/: Arrays.rs
src/Casting_Converting/: Casting_Converting.rs
src/Classes_and_Objects/: Classes_and_Objects.rs
src/Constructors/: Constructors.rs
src/Dictionaries/: Dictionaries.rs
src/Dimensional_Arrays/: Dimensional_Arrays.rs
src/Exception_Catching/: Exception_Catching.rs
src/For_Loops/: For_Loops.rs
src/Getters_and_Setters/: Getters_and_Setters.rs
src/If_Statements/: If_Statements.rs
src/Inheritance/: Inheritance.rs
src/Methods/: Methods.rs
src/Numbers/: Numbers.rs
src/Strings/: Strings.rs
src/Switch_Statements/: Switch_Statements.rs
src/User_Input/: User_Input.rs
src/Variables/: Variables.rs
src/While_Loops/: While_Loops.rs
